backends/candle/tests/snapshots/test_flash_bert__bert_classification_single.snap
---
source: backends/candle/tests/test_flash_bert.rs
expression: predictions_single
---
- - 2.8574219
  - -2.9726563
