backends/candle/tests/snapshots/test_flash_bert__emotions_batch.snap
---
source: backends/candle/tests/test_flash_bert.rs
expression: predictions_batch
---
- - -6.5507813
  - -6.3007813
  - -4.8671875
  - -3.9589844
  - -4.6328125
  - -6.28125
  - -6.0703125
  - -5.7773438
  - -6.9257813
  - -6.1875
  - -5.671875
  - -6.1679688
  - -7.5117188
  - -6.8671875
  - -7.1835938
  - -7.1289063
  - -8.2109375
  - -7.015625
  - -7.1328125
  - -8.53125
  - -6.2304688
  - -8.7421875
  - -5.7773438
  - -8.65625
  - -8.2578125
  - -6.6484375
  - -7.40625
  - 3.046875
- - -5.8164063
  - -6.6132813
  - -5.2773438
  - -2.6328125
  - -4.640625
  - -5.578125
  - -5.8007813
  - -6.03125
  - -5.8710938
  - 0.45166016
  - -3.0253906
  - -5.3945313
  - -5.1875
  - -6.265625
  - -6.1992188
  - -6.9804688
  - -5.5664063
  - -5.5195313
  - -5.890625
  - -4.8710938
  - -5.625
  - -7.609375
  - -4.3867188
  - -6.0390625
  - -4.9375
  - -0.6699219
  - -6.4023438
  - -2.4492188
- - -6.5507813
  - -6.3007813
  - -4.8671875
  - -3.9589844
  - -4.6328125
  - -6.28125
  - -6.0703125
  - -5.7773438
  - -6.9257813
  - -6.1875
  - -5.671875
  - -6.1679688
  - -7.5117188
  - -6.8671875
  - -7.1835938
  - -7.1289063
  - -8.2109375
  - -7.015625
  - -7.1328125
  - -8.53125
  - -6.2304688
  - -8.7421875
  - -5.7773438
  - -8.65625
  - -8.2578125
  - -6.6484375
  - -7.40625
  - 3.046875

