backends/candle/tests/snapshots/test_flash_bert__mini_batch.snap
---
source: backends/candle/tests/test_flash_bert.rs
expression: embeddings_batch
---
- - -0.58984375
  - -0.25219727
  - 0.14880371
  - 0.05505371
  - -0.11785889
  - -0.16687012
  - -0.23266602
  - -0.0713501
  - -0.19946289
  - -0.29589844
  - -0.7734375
  - 0.14379883
  - -0.29101563
  - -0.18518066
  - -0.9091797
  - -0.020019531
  - 0.028320313
  - 0.34765625
  - -1.0029297
  - -0.41674805
  - 0.19372559
  - 0.4008789
  - -0.39111328
  - -0.18908691
  - 0.45239258
  - 0.2565918
  - 0.17712402
  - -0.31420898
  - 0.125
  - -0.083984375
  - 0.64990234
  - -0.23046875
  - 0.18432617
  - 0.49609375
  - -0.36523438
  - 0.83740234
  - -0.55078125
  - 0.103881836
  - 0.09411621
  - -0.21032715
  - -0.29467773
  - -0.18859863
  - -0.009727478
  - 0.18688965
  - 0.92626953
  - 0.33911133
  - -0.08227539
  - -0.60253906
  - 0.15332031
  - 0.21032715
  - -0.20922852
  - -0.13903809
  - -0.38330078
  - 0.63720703
  - 0.0040779114
  - 0.09838867
  - 0.27856445
  - -0.02142334
  - -0.5361328
  - 0.3203125
  - 0.48535156
  - -0.6933594
  - 0.024475098
  - 0.23571777
  - 0.29492188
  - -0.2705078
  - 0.048706055
  - 0.11047363
  - 0.5390625
  - -0.7709961
  - 0.4206543
  - 0.47485352
  - -0.052856445
  - 0.07922363
  - 0.14367676
  - -0.43798828
  - 0.21789551
  - 0.055267334
  - 0.74658203
  - -0.21789551
  - 0.7265625
  - 0.55029297
  - -0.115356445
  - 0.36865234
  - 1.0117188
  - -0.51660156
  - 0.1171875
  - 0.06982422
  - -0.6772461
  - -0.5234375
  - -0.27075195
  - -0.52490234
  - -0.59521484
  - -0.00090646744
  - -0.29223633
  - -0.095581055
  - -0.051849365
  - -0.9140625
  - -0.4033203
  - 0.38427734
  - -0.022644043
  - 0.06329346
  - 0.4169922
  - -0.046691895
  - -0.0690918
  - 0.090148926
  - 0.42626953
  - 0.10913086
  - 0.31054688
  - -0.6245117
  - -0.19177246
  - 0.2939453
  - 0.18359375
  - -0.18981934
  - 0.16455078
  - -0.19396973
  - -0.10266113
  - -0.041015625
  - -0.14880371
  - 0.69140625
  - -0.87353516
  - -0.059570313
  - -0.2454834
  - -0.12854004
  - -0.29174805
  - -0.18908691
  - -0.3671875
  - 0
  - -0.0034694672
  - -0.36645508
  - -0.453125
  - 0.049987793
  - 0.31860352
  - -0.4267578
  - -0.20263672
  - 0.09375
  - -0.4206543
  - 0.44604492
  - -0.14123535
  - 0.08166504
  - -0.13867188
  - 1.1357422
  - 0.3474121
  - 0.095825195
  - -0.64404297
  - 0.5019531
  - 0.83447266
  - -0.59472656
  - -0.061340332
  - 0.31933594
  - -0.17626953
  - 0.022628784
  - -0.05432129
  - -0.10723877
  - 0.15563965
  - 0.16589355
  - 0.21643066
  - -0.028274536
  - -0.5629883
  - 0.076660156
  - -0.16418457
  - -0.06933594
  - 0.3647461
  - 0.04208374
  - 0.017608643
  - -0.062194824
  - 0.30004883
  - -0.26367188
  - 0.34570313
  - 0.062072754
  - -0.06188965
  - -0.43286133
  - -0.20629883
  - -0.16833496
  - 0.20776367
  - -0.71191406
  - -0.65625
  - -0.38549805
  - -0.05316162
  - -0.32641602
  - -0.18273926
  - -0.46020508
  - 0.29223633
  - 0.2775879
  - 0.2133789
  - 0.20581055
  - 0.123535156
  - 0.1817627
  - 0.5332031
  - 0.3996582
  - -0.46826172
  - 0.6645508
  - -0.09686279
  - 0.16113281
  - 0.66503906
  - 0.6796875
  - 1.0478516
  - -0.09429932
  - 0.029663086
  - 0.09698486
  - 0.203125
  - -0.57373047
  - -0.07672119
  - 0.080566406
  - 0.15478516
  - -0.26049805
  - -0.25683594
  - 0.78564453
  - -0.4699707
  - 0.30908203
  - -0.25512695
  - 0.0063476563
  - -0.52978516
  - 0.6074219
  - -0.24633789
  - -0.30200195
  - 0.2614746
  - 0.014785767
  - -0.70166016
  - -0.049835205
  - -0.14868164
  - -0.07977295
  - -0.16442871
  - 0
  - -0.25097656
  - 0.43359375
  - -0.87597656
  - 0.71728516
  - 0.2902832
  - 0.0073280334
  - -0.625
  - 0.35424805
  - -0.5522461
  - 0.18920898
  - 0.20275879
  - -0.03604126
  - 0.45239258
  - 0.10925293
  - 0.19152832
  - -0.16906738
  - -0.35546875
  - -0.34936523
  - -0.47070313
  - -0.2692871
  - 0.23535156
  - 0.5883789
  - -0.33813477
  - -0.24609375
  - -0.15979004
  - -0.22485352
  - -0.25512695
  - 0.12512207
  - -0.10601807
  - 0.2854004
  - 0.17150879
  - -0.32885742
  - -0.67822266
  - 0.44750977
  - 0.29223633
  - 0.50683594
  - 0.59228516
  - -0.28442383
  - -0.26293945
  - -0.42382813
  - 0.21789551
  - -0.009536743
  - 0.18823242
  - 0.25463867
  - -0.3190918
  - -0.05886841
  - 0.007217407
  - -0.04397583
  - 0.32739258
  - -0.19689941
  - 0.31079102
  - 0.027145386
  - 0.034210205
  - -0.3564453
  - -0.25854492
  - -0.07788086
  - -0.108947754
  - 0.18701172
  - 0.14440918
  - 0.43554688
  - -0.1809082
  - -0.49536133
  - -0.1159668
  - -0.18029785
  - -0.16955566
  - 0.8046875
  - -0.59716797
  - 0.62841797
  - 0.032073975
  - 0.14501953
  - 0.80859375
  - 0.10845947
  - 0.34765625
  - 0.58154297
  - -0.54003906
  - -0.5439453
  - 0.056793213
  - -0.0949707
  - -0.33447266
  - -0.18261719
  - 0.39770508
  - -0.80908203
  - -0.10369873
  - 0.65283203
  - -0.09039307
  - 0.10418701
  - -0.24621582
  - 0.5131836
  - -0.35986328
  - -0.026062012
  - -0.24121094
  - 0.10449219
  - -0.6328125
  - 0.0012207031
  - -0.52734375
  - -0.000000059604645
  - -0.19897461
  - 0.08880615
  - 0.55615234
  - -0.7998047
  - 0.3083496
  - -0.18652344
  - 0.10241699
  - 0.8203125
  - 0.024841309
  - 0.07824707
  - 0.6015625
  - 0.013633728
  - -0.5292969
  - -0.15368652
  - 0.027313232
  - 0.61083984
  - 0.45922852
  - -0.0005578995
  - 0.41455078
  - 0.024658203
  - 0.87109375
  - 0.32080078
  - 0.119506836
  - -0.055786133
  - 0.22033691
  - -0.62939453
  - 0.36938477
  - 0.68066406
  - 0.10620117
  - -0.42504883
  - -0.20227051
  - 0.5336914
  - -0.12432861
  - -0.16491699
  - 0.019805908
  - 0.8852539
  - 0.30737305
  - -0.28930664
  - -0.058654785
  - -0.40551758
  - -0.40454102
  - 1.1376953
  - 0.2783203
  - -0.068115234
  - -0.46801758
  - 0.09051514
  - 0.3166504
  - -0.053985596
  - 0.14758301
  - 0.11694336
  - -0.16125488
  - 0.51464844
  - 0.62060547
  - 0.64208984
  - -0.035888672
  - 0.118896484
  - 0.017715454
  - -0.52490234
  - -0.16210938
  - 0.7363281
  - -0.078552246
  - 0.5415039
  - 0.28173828
  - 0.2770996
- - -0.118896484
  - -0.58447266
  - 0.3466797
  - -0.24951172
  - -0.3317871
  - -0.20483398
  - -0.14587402
  - -0.21459961
  - 0.091918945
  - -0.24926758
  - -0.27905273
  - 0.24719238
  - -0.29785156
  - 0.31469727
  - -0.5292969
  - 0.006164551
  - 0.19006348
  - 0.16772461
  - -0.8251953
  - -0.26513672
  - -0.17529297
  - 0.22070313
  - -0.16442871
  - -0.3701172
  - 0.5703125
  - 0.32006836
  - 0.29785156
  - -0.27661133
  - 0.15454102
  - -0.4091797
  - 0.29589844
  - 0.15844727
  - -0.18554688
  - 0.1796875
  - -0.14355469
  - 0.40283203
  - -0.20532227
  - 0.13635254
  - -0.020446777
  - -0.00010681152
  - -0.16699219
  - 0.07495117
  - -0.066223145
  - 0.0063323975
  - 0.45361328
  - 0.1998291
  - -0.09301758
  - -0.3413086
  - -0.02935791
  - 0.039398193
  - -0.41601563
  - -0.08917236
  - -0.13879395
  - 0.09564209
  - -0.031982422
  - -0.021026611
  - 0.53759766
  - -0.27539063
  - -0.24938965
  - 0.38964844
  - -0.034301758
  - -0.20458984
  - 0.00415802
  - 0.59521484
  - 0.20153809
  - 0.34179688
  - 0.1809082
  - 0.14465332
  - 0.12097168
  - 0.039367676
  - 0.43701172
  - 0.4404297
  - -0.0004272461
  - 0.6328125
  - 0.13500977
  - 0.3544922
  - 0.48779297
  - 0.25610352
  - 0.5029297
  - 0.032806396
  - 0.5654297
  - -0.2487793
  - 0.07946777
  - 0.18481445
  - 0.87890625
  - -0.31225586
  - 0.058380127
  - -0.2944336
  - -0.70458984
  - -0.37939453
  - -0.021911621
  - -0.44311523
  - -0.21386719
  - -0.08691406
  - -0.26831055
  - -0.16894531
  - -0.095581055
  - -0.3955078
  - -0.4165039
  - 0.3671875
  - -0.6464844
  - -0.12854004
  - 0.087402344
  - -0.25439453
  - -0.09838867
  - -0.15478516
  - 0.4099121
  - 0.68359375
  - 0.36083984
  - -0.5361328
  - -0.1706543
  - 0.0847168
  - 0.30395508
  - -0.08605957
  - -0.04815674
  - -0.24145508
  - 0.05630493
  - -0.019165039
  - 0.171875
  - 0.39453125
  - -0.10644531
  - -0.11279297
  - -0.16113281
  - 0.20031738
  - 0.086242676
  - -0.47021484
  - -0.123168945
  - 0
  - -0.23730469
  - -0.028137207
  - 0.14819336
  - 0.1381836
  - 0.13745117
  - -0.4111328
  - -0.18139648
  - 0.019515991
  - -0.46020508
  - -0.019958496
  - -0.56933594
  - 0.43701172
  - -0.35595703
  - 0.49316406
  - 0.55371094
  - -0.05114746
  - -0.25976563
  - 0.78125
  - 0.14746094
  - -0.6621094
  - -0.0793457
  - -0.27612305
  - -0.32373047
  - -0.11004639
  - -0.38842773
  - -0.3071289
  - 0.63623047
  - 0.09869385
  - 0.24731445
  - -0.043640137
  - -0.24658203
  - -0.06085205
  - -0.14587402
  - -0.032196045
  - 0.12866211
  - 0.1459961
  - 0.030761719
  - -0.34472656
  - 0.20776367
  - -0.21508789
  - -0.048858643
  - 0.29833984
  - -0.11279297
  - -0.42285156
  - -0.10070801
  - 0.30126953
  - 0.46728516
  - -0.16931152
  - -0.53027344
  - -0.44189453
  - 0.31347656
  - -0.33447266
  - 0.04458618
  - -0.072509766
  - 0.43359375
  - 0.20166016
  - 0.3251953
  - 0.43139648
  - 0.6044922
  - 0.32617188
  - 0.28149414
  - 0.19836426
  - -0.24182129
  - 0.36010742
  - 0.091674805
  - 0.23718262
  - 0.072509766
  - 0.66015625
  - 0.4501953
  - 0.09399414
  - -0.17626953
  - 0.092163086
  - 0.09637451
  - -0.6586914
  - 0.19213867
  - 0.12145996
  - 0.20690918
  - -0.30444336
  - -0.3227539
  - 0.46826172
  - -0.23376465
  - 0.5566406
  - -0.1381836
  - 0.07788086
  - -0.02053833
  - 0.060546875
  - -0.0037231445
  - -0.78271484
  - 0.16271973
  - 0.5708008
  - -0.07342529
  - -0.006652832
  - 0.09222412
  - 0.040893555
  - -0.15576172
  - 0
  - -0.6621094
  - 0.22229004
  - -0.37695313
  - 0.4794922
  - -0.02935791
  - -0.014831543
  - -0.15063477
  - -0.17089844
  - -0.5620117
  - 0.1928711
  - 0.052124023
  - -0.015045166
  - 0.01751709
  - -0.014099121
  - 0.30322266
  - 0.082214355
  - 0.10925293
  - -0.17565918
  - -0.27978516
  - -0.1550293
  - 0.08282471
  - 0.6308594
  - -0.3774414
  - 0.20654297
  - -0.14282227
  - 0.0016174316
  - -0.2788086
  - 0.40649414
  - -0.22167969
  - 0.35668945
  - 0.14453125
  - -0.17211914
  - -0.87402344
  - 0.0154418945
  - -0.07891846
  - -0.1550293
  - 0.3305664
  - -0.15368652
  - -0.50097656
  - -0.35595703
  - 0.20654297
  - 0.05847168
  - -0.46826172
  - 0.031433105
  - -0.31103516
  - -0.38085938
  - -0.03805542
  - 0.13977051
  - 0.1616211
  - 0.23266602
  - 0.12005615
  - -0.19018555
  - 0.035339355
  - -0.3408203
  - -0.04522705
  - -0.13623047
  - -0.05517578
  - 0.021362305
  - 0.122924805
  - 0.29663086
  - -0.5620117
  - -0.44458008
  - -0.14135742
  - -0.095703125
  - 0.43164063
  - 0.20922852
  - -0.33642578
  - 0.5996094
  - -0.2709961
  - 0.18713379
  - 0.7504883
  - 0.014709473
  - -0.19873047
  - 0.2175293
  - -0.7080078
  - -0.45483398
  - 0.03451538
  - 0.10797119
  - 0.024139404
  - -0.6191406
  - 0.49316406
  - -0.4020996
  - 0.22387695
  - 0.87646484
  - 0.35351563
  - 0.7138672
  - 0.099487305
  - -0.16210938
  - -0.23095703
  - -0.16003418
  - -0.44750977
  - 0.26220703
  - -0.2590332
  - 0.6503906
  - -0.46875
  - -0.000000059604645
  - -0.05886841
  - -0.15698242
  - 0.5991211
  - -0.55810547
  - -0.00415802
  - -0.16674805
  - 0.24658203
  - 0.5390625
  - -0.15014648
  - 0.31445313
  - 0.099243164
  - -0.2446289
  - -0.3305664
  - 0.44360352
  - -0.11071777
  - 0.35888672
  - 0.24389648
  - -0.025939941
  - -0.072631836
  - 0.2475586
  - 0.43896484
  - 0.44384766
  - -0.36547852
  - -0.11798096
  - 0.060333252
  - -0.29736328
  - -0.16870117
  - 0.31201172
  - 0.021728516
  - 0.4609375
  - -0.17700195
  - 0.43017578
  - 0.1361084
  - -0.050842285
  - 0.66015625
  - 0.43408203
  - 0.34350586
  - -0.0927124
  - -0.14648438
  - -0.24645996
  - -0.23815918
  - 0.78515625
  - -0.41503906
  - -0.10083008
  - -0.30371094
  - -0.088012695
  - 0.25732422
  - -0.19091797
  - 0.2993164
  - -0.18933105
  - -0.04486084
  - 0.45922852
  - 0.33642578
  - 0.10498047
  - 0.3149414
  - 0.0077667236
  - -0.13061523
  - -0.45410156
  - -0.40771484
  - 0.60839844
  - -0.26049805
  - 0.31103516
  - -0.07019043
  - -0.14758301
- - -0.58984375
  - -0.25219727
  - 0.14880371
  - 0.05505371
  - -0.11785889
  - -0.16687012
  - -0.23266602
  - -0.0713501
  - -0.19946289
  - -0.29589844
  - -0.7734375
  - 0.14379883
  - -0.29101563
  - -0.18518066
  - -0.9091797
  - -0.020019531
  - 0.028320313
  - 0.34765625
  - -1.0029297
  - -0.41674805
  - 0.19372559
  - 0.4008789
  - -0.39111328
  - -0.18908691
  - 0.45239258
  - 0.2565918
  - 0.17712402
  - -0.31420898
  - 0.125
  - -0.083984375
  - 0.64990234
  - -0.23046875
  - 0.18432617
  - 0.49609375
  - -0.36523438
  - 0.83740234
  - -0.55078125
  - 0.103881836
  - 0.09411621
  - -0.21032715
  - -0.29467773
  - -0.18859863
  - -0.009727478
  - 0.18688965
  - 0.92626953
  - 0.33911133
  - -0.08227539
  - -0.60253906
  - 0.15332031
  - 0.21032715
  - -0.20922852
  - -0.13903809
  - -0.38330078
  - 0.63720703
  - 0.0040779114
  - 0.09838867
  - 0.27856445
  - -0.02142334
  - -0.5361328
  - 0.3203125
  - 0.48535156
  - -0.6933594
  - 0.024475098
  - 0.23571777
  - 0.29492188
  - -0.2705078
  - 0.048706055
  - 0.11047363
  - 0.5390625
  - -0.7709961
  - 0.4206543
  - 0.47485352
  - -0.052856445
  - 0.07922363
  - 0.14367676
  - -0.43798828
  - 0.21789551
  - 0.055267334
  - 0.74658203
  - -0.21789551
  - 0.7265625
  - 0.55029297
  - -0.115356445
  - 0.36865234
  - 1.0117188
  - -0.51660156
  - 0.1171875
  - 0.06982422
  - -0.6772461
  - -0.5234375
  - -0.27075195
  - -0.52490234
  - -0.59521484
  - -0.00090646744
  - -0.29223633
  - -0.095581055
  - -0.051849365
  - -0.9140625
  - -0.4033203
  - 0.38427734
  - -0.022644043
  - 0.06329346
  - 0.4169922
  - -0.046691895
  - -0.0690918
  - 0.090148926
  - 0.42626953
  - 0.10913086
  - 0.31054688
  - -0.6245117
  - -0.19177246
  - 0.2939453
  - 0.18359375
  - -0.18981934
  - 0.16455078
  - -0.19396973
  - -0.10266113
  - -0.041015625
  - -0.14880371
  - 0.69140625
  - -0.87353516
  - -0.059570313
  - -0.2454834
  - -0.12854004
  - -0.29174805
  - -0.18908691
  - -0.3671875
  - 0
  - -0.0034694672
  - -0.36645508
  - -0.453125
  - 0.049987793
  - 0.31860352
  - -0.4267578
  - -0.20263672
  - 0.09375
  - -0.4206543
  - 0.44604492
  - -0.14123535
  - 0.08166504
  - -0.13867188
  - 1.1357422
  - 0.3474121
  - 0.095825195
  - -0.64404297
  - 0.5019531
  - 0.83447266
  - -0.59472656
  - -0.061340332
  - 0.31933594
  - -0.17626953
  - 0.022628784
  - -0.05432129
  - -0.10723877
  - 0.15563965
  - 0.16589355
  - 0.21643066
  - -0.028274536
  - -0.5629883
  - 0.076660156
  - -0.16418457
  - -0.06933594
  - 0.3647461
  - 0.04208374
  - 0.017608643
  - -0.062194824
  - 0.30004883
  - -0.26367188
  - 0.34570313
  - 0.062072754
  - -0.06188965
  - -0.43286133
  - -0.20629883
  - -0.16833496
  - 0.20776367
  - -0.71191406
  - -0.65625
  - -0.38549805
  - -0.05316162
  - -0.32641602
  - -0.18273926
  - -0.46020508
  - 0.29223633
  - 0.2775879
  - 0.2133789
  - 0.20581055
  - 0.123535156
  - 0.1817627
  - 0.5332031
  - 0.3996582
  - -0.46826172
  - 0.6645508
  - -0.09686279
  - 0.16113281
  - 0.66503906
  - 0.6796875
  - 1.0478516
  - -0.09429932
  - 0.029663086
  - 0.09698486
  - 0.203125
  - -0.57373047
  - -0.07672119
  - 0.080566406
  - 0.15478516
  - -0.26049805
  - -0.25683594
  - 0.78564453
  - -0.4699707
  - 0.30908203
  - -0.25512695
  - 0.0063476563
  - -0.52978516
  - 0.6074219
  - -0.24633789
  - -0.30200195
  - 0.2614746
  - 0.014785767
  - -0.70166016
  - -0.049835205
  - -0.14868164
  - -0.07977295
  - -0.16442871
  - 0
  - -0.25097656
  - 0.43359375
  - -0.87597656
  - 0.71728516
  - 0.2902832
  - 0.0073280334
  - -0.625
  - 0.35424805
  - -0.5522461
  - 0.18920898
  - 0.20275879
  - -0.03604126
  - 0.45239258
  - 0.10925293
  - 0.19152832
  - -0.16906738
  - -0.35546875
  - -0.34936523
  - -0.47070313
  - -0.2692871
  - 0.23535156
  - 0.5883789
  - -0.33813477
  - -0.24609375
  - -0.15979004
  - -0.22485352
  - -0.25512695
  - 0.12512207
  - -0.10601807
  - 0.2854004
  - 0.17150879
  - -0.32885742
  - -0.67822266
  - 0.44750977
  - 0.29223633
  - 0.50683594
  - 0.59228516
  - -0.28442383
  - -0.26293945
  - -0.42382813
  - 0.21789551
  - -0.009536743
  - 0.18823242
  - 0.25463867
  - -0.3190918
  - -0.05886841
  - 0.007217407
  - -0.04397583
  - 0.32739258
  - -0.19689941
  - 0.31079102
  - 0.027145386
  - 0.034210205
  - -0.3564453
  - -0.25854492
  - -0.07788086
  - -0.108947754
  - 0.18701172
  - 0.14440918
  - 0.43554688
  - -0.1809082
  - -0.49536133
  - -0.1159668
  - -0.18029785
  - -0.16955566
  - 0.8046875
  - -0.59716797
  - 0.62841797
  - 0.032073975
  - 0.14501953
  - 0.80859375
  - 0.10845947
  - 0.34765625
  - 0.58154297
  - -0.54003906
  - -0.5439453
  - 0.056793213
  - -0.0949707
  - -0.33447266
  - -0.18261719
  - 0.39770508
  - -0.80908203
  - -0.10369873
  - 0.65283203
  - -0.09039307
  - 0.10418701
  - -0.24621582
  - 0.5131836
  - -0.35986328
  - -0.026062012
  - -0.24121094
  - 0.10449219
  - -0.6328125
  - 0.0012207031
  - -0.52734375
  - -0.000000059604645
  - -0.19897461
  - 0.08880615
  - 0.55615234
  - -0.7998047
  - 0.3083496
  - -0.18652344
  - 0.10241699
  - 0.8203125
  - 0.024841309
  - 0.07824707
  - 0.6015625
  - 0.013633728
  - -0.5292969
  - -0.15368652
  - 0.027313232
  - 0.61083984
  - 0.45922852
  - -0.0005578995
  - 0.41455078
  - 0.024658203
  - 0.87109375
  - 0.32080078
  - 0.119506836
  - -0.055786133
  - 0.22033691
  - -0.62939453
  - 0.36938477
  - 0.68066406
  - 0.10620117
  - -0.42504883
  - -0.20227051
  - 0.5336914
  - -0.12432861
  - -0.16491699
  - 0.019805908
  - 0.8852539
  - 0.30737305
  - -0.28930664
  - -0.058654785
  - -0.40551758
  - -0.40454102
  - 1.1376953
  - 0.2783203
  - -0.068115234
  - -0.46801758
  - 0.09051514
  - 0.3166504
  - -0.053985596
  - 0.14758301
  - 0.11694336
  - -0.16125488
  - 0.51464844
  - 0.62060547
  - 0.64208984
  - -0.035888672
  - 0.118896484
  - 0.017715454
  - -0.52490234
  - -0.16210938
  - 0.7363281
  - -0.078552246
  - 0.5415039
  - 0.28173828
  - 0.2770996

