backends/candle/tests/snapshots/test_flash_bert__mini_batch_pooled.snap
---
source: backends/candle/tests/test_flash_bert.rs
expression: pooled_embeddings_batch
---
- - -0.0231781
  - -0.52734375
  - 0.17858887
  - -0.1463623
  - -0.001162529
  - 0.105041504
  - -0.12261963
  - 0.019561768
  - -0.2722168
  - -0.3413086
  - -0.41308594
  - 0.08660889
  - -0.4008789
  - -0.21984863
  - -0.54052734
  - -0.101379395
  - -0.21484375
  - 0.5229492
  - -0.37890625
  - -0.03616333
  - 0.08642578
  - 0.10876465
  - -0.027450562
  - -0.19592285
  - -0.046203613
  - 0.08087158
  - 0.14050293
  - -0.47729492
  - 0.11187744
  - -0.65966797
  - 0.21130371
  - -0.27612305
  - -0.1361084
  - 0.096191406
  - -0.26733398
  - 0.36010742
  - -0.38964844
  - 0.0073051453
  - 0.18041992
  - 0.11743164
  - -0.21459961
  - -0.032196045
  - 0.3083496
  - 0.15588379
  - 0.26245117
  - 0.12054443
  - 0.016067505
  - -0.40600586
  - 0.115356445
  - -0.029800415
  - -0.38134766
  - -0.070739746
  - -0.19213867
  - 0.5371094
  - -0.060028076
  - -0.06774902
  - -0.05734253
  - 0.17114258
  - -0.23535156
  - -0.10888672
  - 0.08154297
  - -0.5644531
  - -0.06890869
  - -0.11584473
  - -0.09655762
  - -0.019577026
  - 0.0024909973
  - 0.11016846
  - 0.10723877
  - -0.097961426
  - 0.56347656
  - 0.41479492
  - -0.121276855
  - -0.19787598
  - 0.16308594
  - -0.030258179
  - 0.20275879
  - 0.101989746
  - 0.60253906
  - -0.10784912
  - 0.20532227
  - 0.32495117
  - 0.08404541
  - -0.121520996
  - 0.4501953
  - -0.3984375
  - -0.29174805
  - -0.16040039
  - -0.20593262
  - -0.30859375
  - -0.23071289
  - -0.002040863
  - -0.121154785
  - -0.17358398
  - -0.38134766
  - 0.020401001
  - 0.22131348
  - -0.51708984
  - -0.27978516
  - 5.5507813
  - -0.35620117
  - -0.011779785
  - 0.16552734
  - -0.18493652
  - 0.24230957
  - 0.37597656
  - -0.001868248
  - -0.13635254
  - 0.38061523
  - -0.34057617
  - -0.035888672
  - 0.1673584
  - 0.16308594
  - 0.19128418
  - 0.3173828
  - -0.2298584
  - -0.099975586
  - -0.119628906
  - 0.16918945
  - 0.30859375
  - -0.67285156
  - -0.26000977
  - -0.2861328
  - -0.05001831
  - -0.42626953
  - -1.1591797
  - -0.19299316
  - -0
  - 0.3059082
  - -0.105041504
  - -0.17224121
  - 0.14453125
  - 0.11236572
  - -0.22497559
  - 0.009246826
  - -0.12756348
  - -0.3557129
  - -0.046417236
  - -0.28515625
  - -0.20959473
  - -0.19384766
  - 0.59765625
  - -0.005455017
  - 0.16589355
  - 0.0859375
  - -0.08062744
  - 0.029571533
  - -0.4345703
  - 0.086120605
  - -0.0038166046
  - -0.2010498
  - 0.023895264
  - -0.028762817
  - -0.06732178
  - 0.051818848
  - -0.05596924
  - 0.08215332
  - -0.27148438
  - -0.28735352
  - -0.1484375
  - 0.24328613
  - -0.1619873
  - 0.14440918
  - -0.118652344
  - -0.18933105
  - 0.35351563
  - 0.20458984
  - -0.07336426
  - 0.2993164
  - 0.109558105
  - -0.09375
  - -0.43237305
  - 0.029754639
  - -0.012687683
  - 0.5361328
  - -0.32177734
  - -0.09289551
  - -0.0026054382
  - 0.05441284
  - -0.083618164
  - -0.007881165
  - -0.4128418
  - -0.012878418
  - -0.11047363
  - 0.22509766
  - 0.4177246
  - 0.32104492
  - 0.27490234
  - 0.1472168
  - -0.05026245
  - -0.103881836
  - 0.33374023
  - -0.044158936
  - -0.031555176
  - 0.47021484
  - 0.24609375
  - 0.53466797
  - -0.048919678
  - -0.17956543
  - 0.12792969
  - -0.24243164
  - -0.37280273
  - 0.18774414
  - -0.2019043
  - 0.08062744
  - -0.11254883
  - -0.14331055
  - 0.36572266
  - 0.106933594
  - 0.28637695
  - 0.12634277
  - -0.014427185
  - -0.09765625
  - 0.42358398
  - -0.119628906
  - -0.17810059
  - 0.10443115
  - 0.18566895
  - -0.03451538
  - 0.21472168
  - 0.05770874
  - 0.027420044
  - -0.10595703
  - 0
  - -0.009727478
  - 0.21020508
  - -0.46972656
  - -0.057495117
  - 0.028076172
  - 0.024856567
  - -0.15026855
  - -0.016555786
  - -0.20983887
  - 0.034118652
  - 0.375
  - -0.11462402
  - -0.10095215
  - -0.11126709
  - 0.080566406
  - -0.25146484
  - -0.11810303
  - -0.10437012
  - -0.09289551
  - -0.20825195
  - 0.30249023
  - 0.041229248
  - -0.10003662
  - -0.038513184
  - 0.17224121
  - 0.11352539
  - -0.015556335
  - 0.2692871
  - -0.049926758
  - 0.38989258
  - -0.12817383
  - -0.22814941
  - -0.23339844
  - 0.2253418
  - -0.0592041
  - 0.21813965
  - 0.05505371
  - -0.28564453
  - -0.092163086
  - -0.009254456
  - 0.24584961
  - 0.23547363
  - -0.23303223
  - -0.08294678
  - -0.05441284
  - -0.10803223
  - 0.052459717
  - -0.013847351
  - 0.25683594
  - -0.09857178
  - -0.12768555
  - 0.04071045
  - -0.030838013
  - 0.004421234
  - -0.2956543
  - 0.029556274
  - -0.1907959
  - 0.14978027
  - 0.19873047
  - 0.33862305
  - -0.29345703
  - -0.49194336
  - -0.19128418
  - -0.35229492
  - -0.33544922
  - 0.50390625
  - -0.22766113
  - 0.46875
  - 0.015625
  - -0.07507324
  - -0.11529541
  - 0.28442383
  - -0.0680542
  - 0.3544922
  - -0.31591797
  - -0.30859375
  - -0.11279297
  - -0.2088623
  - -0.115112305
  - -0.0141067505
  - 0.3618164
  - -0.3479004
  - 0.008255005
  - 0.42919922
  - 0.26220703
  - 0.33666992
  - -0.052703857
  - 0.3022461
  - -0.20959473
  - -0.07757568
  - -0.2475586
  - 0.30371094
  - -0.10015869
  - -0.19250488
  - -0.16479492
  - -0.000000059604645
  - -0.4921875
  - 0.57470703
  - 0.29052734
  - -0.066589355
  - 0.36645508
  - 0.17907715
  - 0.10546875
  - 0.55810547
  - -0.019821167
  - 0.084350586
  - 0.19763184
  - -0.23779297
  - -0.24572754
  - -0.22387695
  - -0.04727173
  - 0.14318848
  - -0.13208008
  - -0.068725586
  - 0.30541992
  - 0.005935669
  - 0.57666016
  - 0.37646484
  - 0.19873047
  - -0.06555176
  - -0.013832092
  - -0.46020508
  - 0.13842773
  - -0.5004883
  - -0.059509277
  - -0.07476807
  - -0.017333984
  - 0.0053100586
  - 0.12359619
  - -0.058929443
  - 0.087402344
  - 0.27319336
  - -0.0259552
  - 0.15893555
  - -0.12988281
  - 0.07550049
  - -0.3737793
  - 0.29833984
  - 0.18286133
  - -0.18493652
  - -0.2536621
  - 0.06689453
  - 0.22106934
  - -0.16723633
  - 0.12298584
  - -0.020553589
  - 0.2055664
  - 0.058654785
  - 0.4658203
  - 0.66308594
  - 0.3852539
  - -0.0927124
  - 0.10070801
  - -0.3088379
  - -0.3527832
  - 0.4399414
  - 0.1986084
  - 0.13317871
  - -0.5805664
  - 0.05984497
- - -0.21618652
  - -0.43554688
  - 0.24829102
  - -0.14465332
  - 0.038909912
  - 0.10809326
  - -0.09448242
  - 0.07873535
  - -0.2866211
  - -0.23120117
  - -0.32910156
  - 0.1418457
  - -0.39941406
  - -0.025177002
  - -0.6166992
  - -0.051818848
  - -0.29467773
  - 0.3569336
  - -0.23364258
  - -0.024551392
  - -0.039154053
  - 0.29614258
  - 0.051483154
  - -0.27197266
  - -0.097351074
  - 0.21960449
  - 0.07885742
  - -0.4248047
  - 0.09954834
  - -0.69628906
  - 0.03652954
  - -0.13964844
  - -0.18566895
  - 0.20080566
  - -0.25219727
  - 0.25
  - -0.22680664
  - -0.05480957
  - 0.1583252
  - 0.024414063
  - -0.037750244
  - 0.07873535
  - 0.13269043
  - 0.046051025
  - 0.390625
  - 0.24645996
  - 0.042419434
  - -0.24255371
  - 0.11706543
  - -0.10144043
  - -0.28637695
  - -0.054901123
  - -0.0055007935
  - 0.35791016
  - -0.08001709
  - 0.06262207
  - -0.022277832
  - 0.051940918
  - -0.22070313
  - 0.05657959
  - 0.039093018
  - -0.26904297
  - -0.051208496
  - -0.054840088
  - -0.22802734
  - 0.12030029
  - 0.01914978
  - 0.14538574
  - 0.11791992
  - -0.12805176
  - 0.5390625
  - 0.44213867
  - -0.20397949
  - -0.030349731
  - 0.21252441
  - 0.07043457
  - 0.20837402
  - 0.034179688
  - 0.6035156
  - -0.013839722
  - 0.022354126
  - 0.13085938
  - 0.12359619
  - -0.1204834
  - 0.22753906
  - -0.38549805
  - -0.43725586
  - -0.030456543
  - -0.028045654
  - -0.15307617
  - -0.12548828
  - -0.05722046
  - 0.087402344
  - -0.21118164
  - -0.5151367
  - 0.0057792664
  - 0.23571777
  - -0.48291016
  - -0.18981934
  - 5.6171875
  - -0.23510742
  - 0.062286377
  - 0.19458008
  - -0.03173828
  - 0.3720703
  - 0.3154297
  - 0.17480469
  - -0.056671143
  - 0.2915039
  - -0.27514648
  - 0.052978516
  - -0.020889282
  - 0.1895752
  - 0.08325195
  - 0.3017578
  - -0.29711914
  - 0.008216858
  - -0.0791626
  - 0.27954102
  - 0.30517578
  - -0.31201172
  - -0.40722656
  - -0.3046875
  - 0.074523926
  - -0.2993164
  - -1.2548828
  - -0.3059082
  - -0
  - 0.31518555
  - -0.050628662
  - -0.13830566
  - 0.14343262
  - 0.2376709
  - -0.30297852
  - 0.111206055
  - -0.13671875
  - -0.4958496
  - -0.14587402
  - -0.20166016
  - -0.31103516
  - -0.22619629
  - 0.34301758
  - 0.018997192
  - -0.02645874
  - 0.11804199
  - 0.066711426
  - -0.072021484
  - -0.36132813
  - -0.18652344
  - 0.18029785
  - 0.05529785
  - 0.08874512
  - 0.18054199
  - -0.14025879
  - -0.058258057
  - -0.057159424
  - 0.04473877
  - -0.3515625
  - -0.18798828
  - -0.13830566
  - 0.20361328
  - -0.21044922
  - 0.03945923
  - -0.16479492
  - 0.012969971
  - 0.16625977
  - 0.055145264
  - -0.110839844
  - 0.2310791
  - 0.115478516
  - 0.01335144
  - -0.4597168
  - 0.021881104
  - 0.013931274
  - 0.49780273
  - -0.15637207
  - -0.10144043
  - -0.029006958
  - 0.11077881
  - 0.0079574585
  - 0.08117676
  - -0.14672852
  - 0.020751953
  - 0.08526611
  - 0.31054688
  - 0.43969727
  - 0.32592773
  - 0.19299316
  - 0.017913818
  - -0.12438965
  - -0.17077637
  - 0.41137695
  - -0.12335205
  - -0.0947876
  - 0.5102539
  - 0.14013672
  - 0.41381836
  - 0.0016269684
  - -0.26171875
  - 0.0074424744
  - -0.1784668
  - -0.3947754
  - 0.095703125
  - -0.14331055
  - 0.045196533
  - -0.10498047
  - -0.21044922
  - 0.3413086
  - 0.23486328
  - 0.18774414
  - 0.037231445
  - 0.15673828
  - 0.064453125
  - 0.21008301
  - 0.021347046
  - -0.15649414
  - -0.07281494
  - 0.21057129
  - 0.11273193
  - 0.13574219
  - 0.039245605
  - -0.10418701
  - -0.037261963
  - 0
  - -0.03753662
  - -0.066467285
  - -0.31225586
  - 0.049957275
  - -0.10247803
  - 0.019332886
  - -0.030563354
  - 0.018218994
  - -0.22814941
  - 0.079833984
  - 0.18518066
  - 0.005844116
  - -0.07745361
  - -0.1739502
  - 0.14428711
  - -0.17163086
  - 0.007007599
  - -0.08911133
  - 0.089782715
  - -0.14941406
  - 0.3540039
  - -0.04333496
  - -0.0041275024
  - 0.020751953
  - 0.15441895
  - 0.11645508
  - -0.19580078
  - 0.24768066
  - 0.07312012
  - 0.18469238
  - -0.18725586
  - -0.24243164
  - -0.15759277
  - 0.030685425
  - -0.1361084
  - -0.004425049
  - -0.00038146973
  - -0.119506836
  - -0.089782715
  - 0.096069336
  - 0.29248047
  - 0.23291016
  - -0.31298828
  - -0.20898438
  - 0.040130615
  - -0.095703125
  - 0.15026855
  - 0.13293457
  - 0.1583252
  - 0.06768799
  - -0.22790527
  - 0.09576416
  - -0.25317383
  - -0.029754639
  - -0.25317383
  - 0.09698486
  - -0.15222168
  - -0.013023376
  - 0.18798828
  - 0.14855957
  - -0.17529297
  - -0.47998047
  - -0.12939453
  - -0.31958008
  - -0.4116211
  - 0.30322266
  - -0.11651611
  - 0.3486328
  - -0.17675781
  - -0.14611816
  - -0.14794922
  - -0.032836914
  - -0.025360107
  - 0.2685547
  - -0.23083496
  - -0.2956543
  - -0.18652344
  - -0.24597168
  - -0.14624023
  - -0.006549835
  - 0.3239746
  - -0.29760742
  - 0.019302368
  - 0.3215332
  - 0.39990234
  - 0.19836426
  - 0.07720947
  - 0.34765625
  - 0.058502197
  - -0.125
  - -0.26123047
  - 0.14367676
  - -0.15258789
  - -0.118896484
  - -0.24023438
  - -0.000000059604645
  - -0.4194336
  - 0.56640625
  - 0.33374023
  - -0.086120605
  - 0.18847656
  - 0.052825928
  - 0.13769531
  - 0.27392578
  - -0.04663086
  - 0.118774414
  - 0.30639648
  - -0.1459961
  - -0.45629883
  - -0.19396973
  - 0.052490234
  - 0.033447266
  - -0.07299805
  - -0.076049805
  - 0.17175293
  - -0.116760254
  - 0.45703125
  - 0.36376953
  - 0.16723633
  - -0.084350586
  - -0.011749268
  - -0.16638184
  - 0.124694824
  - -0.6010742
  - -0.009643555
  - -0.049102783
  - -0.20458984
  - 0.023254395
  - 0.25976563
  - 0.14221191
  - 0.101135254
  - 0.28686523
  - 0.15002441
  - 0.15783691
  - -0.026306152
  - 0.1048584
  - -0.3564453
  - 0.19726563
  - -0.07739258
  - -0.16723633
  - -0.16540527
  - 0.030639648
  - 0.05380249
  - -0.024765015
  - 0.22521973
  - -0.025680542
  - 0.21960449
  - -0.030532837
  - 0.113220215
  - 0.4375
  - 0.3984375
  - -0.17028809
  - 0.2166748
  - -0.3251953
  - -0.095825195
  - 0.40698242
  - 0.24291992
  - 0.042785645
  - -0.34887695
  - -0.061920166
- - -0.0231781
  - -0.52734375
  - 0.17858887
  - -0.1463623
  - -0.001162529
  - 0.105041504
  - -0.12261963
  - 0.019561768
  - -0.2722168
  - -0.3413086
  - -0.41308594
  - 0.08660889
  - -0.4008789
  - -0.21984863
  - -0.54052734
  - -0.101379395
  - -0.21484375
  - 0.5229492
  - -0.37890625
  - -0.03616333
  - 0.08642578
  - 0.10876465
  - -0.027450562
  - -0.19592285
  - -0.046203613
  - 0.08087158
  - 0.14050293
  - -0.47729492
  - 0.11187744
  - -0.65966797
  - 0.21130371
  - -0.27612305
  - -0.1361084
  - 0.096191406
  - -0.26733398
  - 0.36010742
  - -0.38964844
  - 0.0073051453
  - 0.18041992
  - 0.11743164
  - -0.21459961
  - -0.032196045
  - 0.3083496
  - 0.15588379
  - 0.26245117
  - 0.12054443
  - 0.016067505
  - -0.40600586
  - 0.115356445
  - -0.029800415
  - -0.38134766
  - -0.070739746
  - -0.19213867
  - 0.5371094
  - -0.060028076
  - -0.06774902
  - -0.05734253
  - 0.17114258
  - -0.23535156
  - -0.10888672
  - 0.08154297
  - -0.5644531
  - -0.06890869
  - -0.11584473
  - -0.09655762
  - -0.019577026
  - 0.0024909973
  - 0.11016846
  - 0.10723877
  - -0.097961426
  - 0.56347656
  - 0.41479492
  - -0.121276855
  - -0.19787598
  - 0.16308594
  - -0.030258179
  - 0.20275879
  - 0.101989746
  - 0.60253906
  - -0.10784912
  - 0.20532227
  - 0.32495117
  - 0.08404541
  - -0.121520996
  - 0.4501953
  - -0.3984375
  - -0.29174805
  - -0.16040039
  - -0.20593262
  - -0.30859375
  - -0.23071289
  - -0.002040863
  - -0.121154785
  - -0.17358398
  - -0.38134766
  - 0.020401001
  - 0.22131348
  - -0.51708984
  - -0.27978516
  - 5.5507813
  - -0.35620117
  - -0.011779785
  - 0.16552734
  - -0.18493652
  - 0.24230957
  - 0.37597656
  - -0.001868248
  - -0.13635254
  - 0.38061523
  - -0.34057617
  - -0.035888672
  - 0.1673584
  - 0.16308594
  - 0.19128418
  - 0.3173828
  - -0.2298584
  - -0.099975586
  - -0.119628906
  - 0.16918945
  - 0.30859375
  - -0.67285156
  - -0.26000977
  - -0.2861328
  - -0.05001831
  - -0.42626953
  - -1.1591797
  - -0.19299316
  - -0
  - 0.3059082
  - -0.105041504
  - -0.17224121
  - 0.14453125
  - 0.11236572
  - -0.22497559
  - 0.009246826
  - -0.12756348
  - -0.3557129
  - -0.046417236
  - -0.28515625
  - -0.20959473
  - -0.19384766
  - 0.59765625
  - -0.005455017
  - 0.16589355
  - 0.0859375
  - -0.08062744
  - 0.029571533
  - -0.4345703
  - 0.086120605
  - -0.0038166046
  - -0.2010498
  - 0.023895264
  - -0.028762817
  - -0.06732178
  - 0.051818848
  - -0.05596924
  - 0.08215332
  - -0.27148438
  - -0.28735352
  - -0.1484375
  - 0.24328613
  - -0.1619873
  - 0.14440918
  - -0.118652344
  - -0.18933105
  - 0.35351563
  - 0.20458984
  - -0.07336426
  - 0.2993164
  - 0.109558105
  - -0.09375
  - -0.43237305
  - 0.029754639
  - -0.012687683
  - 0.5361328
  - -0.32177734
  - -0.09289551
  - -0.0026054382
  - 0.05441284
  - -0.083618164
  - -0.007881165
  - -0.4128418
  - -0.012878418
  - -0.11047363
  - 0.22509766
  - 0.4177246
  - 0.32104492
  - 0.27490234
  - 0.1472168
  - -0.05026245
  - -0.103881836
  - 0.33374023
  - -0.044158936
  - -0.031555176
  - 0.47021484
  - 0.24609375
  - 0.53466797
  - -0.048919678
  - -0.17956543
  - 0.12792969
  - -0.24243164
  - -0.37280273
  - 0.18774414
  - -0.2019043
  - 0.08062744
  - -0.11254883
  - -0.14331055
  - 0.36572266
  - 0.106933594
  - 0.28637695
  - 0.12634277
  - -0.014427185
  - -0.09765625
  - 0.42358398
  - -0.119628906
  - -0.17810059
  - 0.10443115
  - 0.18566895
  - -0.03451538
  - 0.21472168
  - 0.05770874
  - 0.027420044
  - -0.10595703
  - 0
  - -0.009727478
  - 0.21020508
  - -0.46972656
  - -0.057495117
  - 0.028076172
  - 0.024856567
  - -0.15026855
  - -0.016555786
  - -0.20983887
  - 0.034118652
  - 0.375
  - -0.11462402
  - -0.10095215
  - -0.11126709
  - 0.080566406
  - -0.25146484
  - -0.11810303
  - -0.10437012
  - -0.09289551
  - -0.20825195
  - 0.30249023
  - 0.041229248
  - -0.10003662
  - -0.038513184
  - 0.17224121
  - 0.11352539
  - -0.015556335
  - 0.2692871
  - -0.049926758
  - 0.38989258
  - -0.12817383
  - -0.22814941
  - -0.23339844
  - 0.2253418
  - -0.0592041
  - 0.21813965
  - 0.05505371
  - -0.28564453
  - -0.092163086
  - -0.009254456
  - 0.24584961
  - 0.23547363
  - -0.23303223
  - -0.08294678
  - -0.05441284
  - -0.10803223
  - 0.052459717
  - -0.013847351
  - 0.25683594
  - -0.09857178
  - -0.12768555
  - 0.04071045
  - -0.030838013
  - 0.004421234
  - -0.2956543
  - 0.029556274
  - -0.1907959
  - 0.14978027
  - 0.19873047
  - 0.33862305
  - -0.29345703
  - -0.49194336
  - -0.19128418
  - -0.35229492
  - -0.33544922
  - 0.50390625
  - -0.22766113
  - 0.46875
  - 0.015625
  - -0.07507324
  - -0.11529541
  - 0.28442383
  - -0.0680542
  - 0.3544922
  - -0.31591797
  - -0.30859375
  - -0.11279297
  - -0.2088623
  - -0.115112305
  - -0.0141067505
  - 0.3618164
  - -0.3479004
  - 0.008255005
  - 0.42919922
  - 0.26220703
  - 0.33666992
  - -0.052703857
  - 0.3022461
  - -0.20959473
  - -0.07757568
  - -0.2475586
  - 0.30371094
  - -0.10015869
  - -0.19250488
  - -0.16479492
  - -0.000000059604645
  - -0.4921875
  - 0.57470703
  - 0.29052734
  - -0.066589355
  - 0.36645508
  - 0.17907715
  - 0.10546875
  - 0.55810547
  - -0.019821167
  - 0.084350586
  - 0.19763184
  - -0.23779297
  - -0.24572754
  - -0.22387695
  - -0.04727173
  - 0.14318848
  - -0.13208008
  - -0.068725586
  - 0.30541992
  - 0.005935669
  - 0.57666016
  - 0.37646484
  - 0.19873047
  - -0.06555176
  - -0.013832092
  - -0.46020508
  - 0.13842773
  - -0.5004883
  - -0.059509277
  - -0.07476807
  - -0.017333984
  - 0.0053100586
  - 0.12359619
  - -0.058929443
  - 0.087402344
  - 0.27319336
  - -0.0259552
  - 0.15893555
  - -0.12988281
  - 0.07550049
  - -0.3737793
  - 0.29833984
  - 0.18286133
  - -0.18493652
  - -0.2536621
  - 0.06689453
  - 0.22106934
  - -0.16723633
  - 0.12298584
  - -0.020553589
  - 0.2055664
  - 0.058654785
  - 0.4658203
  - 0.66308594
  - 0.3852539
  - -0.0927124
  - 0.10070801
  - -0.3088379
  - -0.3527832
  - 0.4399414
  - 0.1986084
  - 0.13317871
  - -0.5805664
  - 0.05984497

